# hello-gozero

./: .gitignore  ARCHITECTURE.md  DONE.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  docker-compose.yml  go.mod  go.sum  hellogozero.go  main.go  main.py  pyproject.toml  pytest.ini  verify_setup.sh
.devcontainer/: devcontainer.json
.github/instructions/: common.instructions.md  go.instructions.md  sql.instructions.md
api/: main.api
api/hello/: hello.api
api/user/: user.api
app/: main.go
debug/: health.py  update_password.py
debug/user/: create_user.py  register_user.py
demo/: demo.go
demo/demo/: demo.pb.go  demo_grpc.pb.go
demo/democlient/: demo.go
dockerfiles/: Dockerfile
docs/: KAFKA_DISTRIBUTED_CONSUMPTION.md  PPROF_USAGE.md  PYTEST_MIGRATION.md  WORKER.md  并发注册用户的冲突问题.md
etc/: hellogozero.yaml
infra/cache/: lock.go  redis.go  utils.go
infra/database/: logger.go  mysql.go
infra/queue/: kafka.go
internal/component/: http.go  pprof.go  rpc_server.go  worker.go
internal/config/: config.go
internal/handler/: routes.go
internal/routes/: routes.go  user.go  user.md
internal/svc/: servicecontext.go  servicecontext_test.go
internal/types/: types.go
internal/worker/: manager.go  scheduled_worker.go
pkg/cache/: redis.go
pkg/database/: mysql.go
pkg/executor/: batchexecutor.go
scripts/: docker-pre-build.sh  init.sh
sql/: command.sql  message_dedup.sql  user.sql
test/: README.md  __init__.py  check_service.py  conftest.py  helpers.py  models.py  performance_models.py  test_config.yaml
test/helpers/: __init__.py  (+3 more)
(+61 files in other folders)
