[project]
name = "hello-gozero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
