[project]
name = "hello-gozero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.5",
    "requests>=2.32.5",
    "pytest>=8.3.4",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
